// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "default_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.allowClear: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": false,
      "autoFocus": undefined,
      "children": Array [
        <mockConstructor
          className="{}"
          id="properties.allowClear: false_0"
          value={0}
        >
          Option 1
        </mockConstructor>,
        <mockConstructor
          className="{}"
          id="properties.allowClear: false_1"
          value={1}
        >
          Option 2
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.allowClear: false_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoFocus: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": true,
      "children": Array [
        <mockConstructor
          className="{}"
          id="properties.autoFocus: true_0"
          value={0}
        >
          Option 1
        </mockConstructor>,
        <mockConstructor
          className="{}"
          id="properties.autoFocus: true_1"
          value={1}
        >
          Option 2
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.autoFocus: true_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.clearIcon: ChromeFilled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [
        <mockConstructor
          className="{}"
          id="properties.clearIcon: ChromeFilled_0"
          value={0}
        >
          Option 1
        </mockConstructor>,
        <mockConstructor
          className="{}"
          id="properties.clearIcon: ChromeFilled_1"
          value={1}
        >
          Option 2
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": <IconBlock
        basePath=""
        blockId="properties.clearIcon: ChromeFilled_clearIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="ChromeFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.clearIcon: ChromeFilled_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.clearIcon-object: ChromeFilled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [
        <mockConstructor
          className="{}"
          id="properties.clearIcon-object: ChromeFilled_0"
          value={0}
        >
          Option 1
        </mockConstructor>,
        <mockConstructor
          className="{}"
          id="properties.clearIcon-object: ChromeFilled_1"
          value={1}
        >
          Option 2
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": <IconBlock
        basePath=""
        blockId="properties.clearIcon-object: ChromeFilled_clearIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "color": "red",
            "name": "ChromeFilled",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.clearIcon-object: ChromeFilled_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": true,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.disabled: true_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.inputStyle: CSS style applied - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},{\\"border\\":\\"1px solid red\\"}]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.inputStyle: CSS style applied_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label align: left - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.label align: left_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label align: right - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.label align: right_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label colon: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.label colon: false_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.label disabled: true_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label extra: showing extra - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.label extra: showing extra_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label inline: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.label inline: true_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label span: 12 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.label span: 12_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.options-boolean - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [
        <mockConstructor
          className="{}"
          id="properties.options-boolean_0"
          value={0}
        >
          true
        </mockConstructor>,
        <mockConstructor
          className="{}"
          id="properties.options-boolean_1"
          value={1}
        >
          false
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.options-boolean_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.options-number - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [
        <mockConstructor
          className="{}"
          id="properties.options-number_0"
          value={0}
        >
          10
        </mockConstructor>,
        <mockConstructor
          className="{}"
          id="properties.options-number_1"
          value={1}
        >
          12
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.options-number_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.options-object - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [
        <mockConstructor
          className="{}"
          id="properties.options-object_0"
          value={0}
        >
          one
        </mockConstructor>,
        <mockConstructor
          className="{}"
          id="properties.options-object_1"
          value={1}
        >
          two
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.options-object_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.options-string - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [
        <mockConstructor
          className="{}"
          id="properties.options-string_0"
          value={0}
        >
          Option 1
        </mockConstructor>,
        <mockConstructor
          className="{}"
          id="properties.options-string_1"
          value={1}
        >
          Option 2
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.options-string_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.optionsStyle: CSS style applied - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [
        <mockConstructor
          className="{\\"style\\":{\\"color\\":\\"blue\\"}}"
          id="properties.optionsStyle: CSS style applied_0"
          value={0}
        >
          Option 1
        </mockConstructor>,
        <mockConstructor
          className="{\\"style\\":{\\"color\\":\\"blue\\"}}"
          id="properties.optionsStyle: CSS style applied_1"
          value={1}
        >
          Option 2
        </mockConstructor>,
      ],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.optionsStyle: CSS style applied_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placeholder: Find item in list - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.placeholder: Find item in list_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Find item in list",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.showArrow: false - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.showArrow: false_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": false,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.size: default_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": "default",
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: large - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.size: large_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": "large",
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.size: small_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": "small",
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffixIcon: DoubleLeftOutlined - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.suffixIcon: DoubleLeftOutlined_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": <IconBlock
        basePath=""
        blockId="properties.suffixIcon: DoubleLeftOutlined_suffixIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="DoubleLeftOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "value": Array [],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title: My MultipleSelector Title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "allowClear": true,
      "autoFocus": undefined,
      "children": Array [],
      "className": "{\\"style\\":[{\\"width\\":\\"100%\\"},null]}",
      "clearIcon": undefined,
      "disabled": undefined,
      "filterOption": [Function],
      "getPopupContainer": [Function],
      "id": "properties.title: My MultipleSelector Title_input",
      "menuItemSelectedIcon": undefined,
      "mode": "multiple",
      "notFoundContent": "Not found",
      "onChange": [Function],
      "placeholder": "Select items",
      "showArrow": true,
      "size": undefined,
      "suffixIcon": undefined,
      "value": Array [],
    },
    Object {},
  ],
]
`;
